--- a/project.json
+++ b/project.json
@@ -1,7 +1,7 @@
 {
   "version": "0.1-alpha-*",
   "dependencies": {
-    "Microsoft.AspNet.Server.IIS":"1.0.0-beta1",
+    "Microsoft.AspNet.Server.IIS": "1.0.0-beta1",
     "Microsoft.AspNet.Diagnostics": "1.0.0-beta1",
     "Microsoft.AspNet.Hosting": "1.0.0-beta1",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta1",
@@ -14,5 +14,6 @@
   },
   "frameworks": {
     "aspnet50": {}
-  }
+  },
+  "webroot": "wwwroot"
 }
