--- a/project.json
+++ b/project.json
@@ -6,17 +6,21 @@
     "Microsoft.AspNet.Hosting": "1.0.0-beta1",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta1",
     "Microsoft.AspNet.StaticFiles": "1.0.0-beta1",
-    "Kestrel": "1.0.0-beta1"
+    "Kestrel": "1.0.0-beta1",
+    "kmon": "0.3.0"
   },
   "commands": {
-    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5001",
-    "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5004"
+    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:3000",
+    "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:3000",
+    "watch" : "kmon --server kestrel"
   },
   "frameworks": {
     "aspnet50": {}
   },
   "scripts": {
-    "postrestore": ["npm install"]
+    "postrestore": [
+      "npm install"
+    ]
   },
   "webroot": "wwwroot"
 }
