--- a/project.json
+++ b/project.json
@@ -1,26 +1,33 @@
 {
-  "version": "0.1-alpha-*",
+  "webroot": "wwwroot",
+  "version": "1.0.0-*",
+
   "dependencies": {
-    "Microsoft.AspNet.Server.IIS": "1.0.0-beta1",
-    "Microsoft.AspNet.Diagnostics": "1.0.0-beta1",
-    "Microsoft.AspNet.Hosting": "1.0.0-beta1",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta1",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta1",
-    "Kestrel": "1.0.0-beta1",
-    "kmon": "0.3.0"
+    "Microsoft.AspNet.Server.IIS": "1.0.0-beta7",
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta7",
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta7"
   },
+
   "commands": {
-    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:3000",
-    "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:3000",
-    "watch" : "kmon --server kestrel"
+    "kestrel": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.Kestrel --config hosting.ini",
+    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --config hosting.ini"
   },
+
   "frameworks": {
-    "aspnet50": {}
+    "dnx451": {},
+    "dnxcore50": {}
   },
-  "scripts": {
-    "postrestore": [
-      "npm install"
-    ]
-  },
-  "webroot": "wwwroot"
+
+  "publishExclude": [
+    "node_modules",
+    "bower_components",
+    "**.xproj",
+    "**.user",
+    "**.vspscc"
+  ],
+  "exclude": [
+    "wwwroot",
+    "node_modules",
+    "bower_components"
+  ]
 }
